# sams-plugin

./: license  readme.md  sams-plugin.cabal
examples/: Example1A.hs  Example1B.hs
plugin/: Sam'sOptics.hs  Sam'sPlugin.hs
